--- a/src/app/todo-dashboard/todo-dashboard.component.html
+++ b/src/app/todo-dashboard/todo-dashboard.component.html
@@ -1,10 +1,10 @@
 <h1>Dashboard</h1>
 <p>
-  Last Update: {{ ($lastUpdate | async) | date:'mediumTime' }}
+  Last Update: {{ (lastUpdate$ | async) | date:'mediumTime' }}
 </p>
 <p>
-  Total items: {{ ($todos | async).size }}
+  Total items: {{ todosCount$ | async }}
 </p>
 <p>
-  <button (click)="clearTodos()">Delete All</button>
+  <button (click)="clearTodoss()">Delete All</button>
 </p>
