--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -2,7 +2,7 @@
 <input type="text" #title>
 <button (click)="addTodo(title)">Add</button>
 <ul>
-  <li *ngFor="let t of $todos | async">
+  <li *ngFor="let t of todos$ | async">
     <button (click)="removeTodo(t)">Remove</button>
     <span (click)="toggleTodo(t)" [class.completed]="t.completed">
       {{ t.title }}
